# Astrolang

./: TODO.md
ast/: Cargo.toml
ast/src/: lib.rs
ast_build_checker/: Cargo.toml
ast_build_checker/src/: checker.rs  lib.rs
astroast/: Cargo.toml
astrocompiler/: Cargo.toml
astroparser/: astro.pest
astrotypechecker/: Cargo.toml
astrotypechecker/src/: checker.rs  lib.rs  types.rs
core/: Cargo.toml
core/src/: main.rs
parser/: Cargo.toml  astro.pest
parser/src/: lib.rs
sample/: imageboardsample.astro  newer_like_lua.astro  simple_stuff.astro
types/: Cargo.toml
types/src/: lib.rs  type_parsing.rs
