[package]
name = "astrotypechecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astroparser = {path = "../parser"}
types = {path ="../types"}
astroast = {path="../ast"}
pest = "2.5.5"
pest_derive = "2.5.5"
immutable-map = "0.1.2"
